--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 license-files = { paths = ["LICENSE"] }
 authors = [
-    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
+    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" },
+    { name = "Roman Sanz Alchu" }
 ]
 keywords = [
     "cheminformatics",
